--- a/chemodan__shop/balance.html
+++ b/chemodan__shop/balance.html
@@ -1580,7 +1580,7 @@
 					<button><i></i></button>
 				</div>
 				<!-- Mainbox -->
-				<div class="mainbox mainbox__wishlist">
+				<div class="mainbox mainbox__balance">
 					<!-- Breadcrumbs -->
 					<div class="breadcrumbs">
 						<nav>
@@ -2231,7 +2231,7 @@
 				</div>
 			</div>
 			<div class="footer__border"></div>
-			<div class="footer__box">
+			<div class="footer__box footer__contacts">
 				<h2 class="fmenu__title">КОНТАКТЫ</h2>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+88005553535" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a>
