--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -751,12 +751,24 @@
 				</div>
 				<!-- Banner -->
 				<div class="banner">
-					<img src="img/banner.jpg" alt="">
-					<img src="img/banner.jpg" alt="">
-					<img src="img/banner.jpg" alt="">
-					<img src="img/banner.jpg" alt="">
-					<img src="img/banner.jpg" alt="">
-					<img src="img/banner.jpg" alt="">
+					<div>
+						<img src="img/banner.jpg" alt="">
+					</div>
+					<div>
+						<img src="img/banner.jpg" alt="">
+					</div>
+					<div>
+						<img src="img/banner.jpg" alt="">
+					</div>
+					<div>
+						<img src="img/banner.jpg" alt="">
+					</div>
+					<div>
+						<img src="img/banner.jpg" alt="">
+					</div>
+					<div>
+						<img src="img/banner.jpg" alt="">
+					</div>
 				</div>
 				<!-- Banner categories -->
 				<div class="bannercat">
@@ -3492,7 +3504,7 @@
 				</div>
 			</div>
 			<div class="footer__border"></div>
-			<div class="footer__box">
+			<div class="footer__box footer__contacts">
 				<h2 class="fmenu__title">КОНТАКТЫ</h2>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+88005553535" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a>
