--- a/chemodan__shop/card_goods.html
+++ b/chemodan__shop/card_goods.html
@@ -2851,7 +2851,7 @@ ia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolor
 				</div>
 			</div>
 			<div class="footer__border"></div>
-			<div class="footer__box">
+			<div class="footer__box footer__contacts">
 				<h2 class="fmenu__title">КОНТАКТЫ</h2>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+88005553535" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a>
