--- a/zernovarka/index.html
+++ b/zernovarka/index.html
@@ -406,8 +406,12 @@ sed do eiusmod tempor incididunt</a>
 				</nav>
 				<div class="header__searchcont flex">
 					<input type="search" placeholder="Поиск по сайту">
-					<span>по коду товара</span>
-					<img src="img/search.png" alt="">
+					<div class="header__sort header__toggle flex">
+						<span class="active">по коду товара</span>
+						<span>по названию</span>
+						<img class="header__more" src="img/arrow-r.png" alt="">
+					</div>
+					<img class="toggle" src="img/search.png" alt="">
 				</div>
 			</div>
 		</div>	
@@ -422,7 +426,7 @@ sed do eiusmod tempor incididunt</a>
 			<div class="wrapper flex">
 				<div class="footer__main">
 					<a href="" class="logo">
-						<img src="img/logo.png" alt="">
+						<img src="img/flogo.png" alt="">
 					</a>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
