--- a/zernovarka/index.html
+++ b/zernovarka/index.html
@@ -71,18 +71,18 @@
 						</div>
 					</div>
 				</div>
-				<div class="adv flex">
-					<div class="adv__item flex">
-						<img src="img/adv1.png" alt="">
-						<p class="adv__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
+				<div class="adva flex">
+					<div class="adva__item flex">
+						<img src="img/adva1.png" alt="">
+						<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
 					</div>
-					<div class="adv__item flex">
-						<img src="img/adv2.png" alt="">
-						<p class="adv__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
+					<div class="adva__item flex">
+						<img src="img/adva2.png" alt="">
+						<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
 					</div>
-					<div class="adv__item flex">
-						<img src="img/adv3.png" alt="">
-						<p class="adv__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
+					<div class="adva__item flex">
+						<img src="img/adva3.png" alt="">
+						<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
 					</div>
 				</div>
 			</div>
