--- a/bitlab/index.html
+++ b/bitlab/index.html
@@ -1230,22 +1230,22 @@
 					<img src="img/line2.png" alt="">
 				</div>
 				<div class="portfolio__tabs flex">
-					<div class="portfolio__tab wow bounceInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
+					<div class="portfolio__tab wow bounceInRight" data-wow-duration="1s" data-wow-delay="0.5s">
 						<span class="active">Все</span>
 					</div>
-					<div class="portfolio__tab wow bounceInLeft" data-wow-duration="1s" data-wow-delay="1.3s">
+					<div class="portfolio__tab wow bounceInRight" data-wow-duration="1s" data-wow-delay="0.7s">
 						<span>Лендинг</span>
 					</div>
-					<div class="portfolio__tab wow bounceInLeft" data-wow-duration="1s" data-wow-delay="1.1s">
+					<div class="portfolio__tab wow bounceInRight" data-wow-duration="1s" data-wow-delay="0.9s">
 						<span>Сайт визитка</span>
 					</div>
-					<div class="portfolio__tab wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0.9s">
+					<div class="portfolio__tab wow bounceInRight" data-wow-duration="1s" data-wow-delay="1.1s">
 						<span>Корпоративные сайты</span>
 					</div>
-					<div class="portfolio__tab wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0.7s">
+					<div class="portfolio__tab wow bounceInRight" data-wow-duration="1s" data-wow-delay="1.3s">
 						<span>Интернет магазины</span>
 					</div>
-					<div class="portfolio__tab wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0.5s">
+					<div class="portfolio__tab wow bounceInRight" data-wow-duration="1s" data-wow-delay="1.5s">
 						<span>Порталы </span>
 					</div>
 				</div>
@@ -1369,7 +1369,7 @@
 									</div>
 									<div class="comment__info">
 										<h2>Олеся Сорокина</h2>
-										<p>г.Москва</p>
+										<p>OOO ROCKET</p>
 									</div>
 								</div>
 								<p class="comment__text">С другой стороны сложившаяся структура организации позволяет оценить значение системы обучения кадров, соответствует насущным потребностям. Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации дальнейших направлений развития. С другой стороны начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки направлений прогрессивного развития.</p>
@@ -1689,11 +1689,16 @@
 								<img src="img/upload.png" alt="">
 								<span>+файл</span>
 							</div>
-							<div class="btn">
+							<div class="btn footer__send">
 								<input type="submit" value="Оставить заявку">
 							</div>
 						</div>
 					</form>
+					<div class="services__form services__success flex">
+						<img src="img/serv-success.png" alt="">
+						<img src="img/mini-line.png" alt="">
+						<h2>Ваша заявка принята!</h2>
+					</div>
 				</div>
 			</div>
 		</div>
