--- a/medvag/index.html
+++ b/medvag/index.html
@@ -98,6 +98,7 @@
 					</li>
 				</ul>
 			</nav>
+			<div class="sidebar__border"></div>
 			<div class="sidebar__info">
 				<a href="tel:88002000600" class="phone">8-800-2000-600</a>
 				<button class="callback">Обратный звонок</button>
@@ -106,7 +107,7 @@
 			</div>
 		</div>
 		<div class="main">
-			<div class="banner">
+			<div class="banner banner_1">
 				<div class="banner__text">
 					<p class="banner__left">Косметологическое оборудование</p>
 					<p class="banner__right">от мировых производителей</p>
