--- a/medvag/index.html
+++ b/medvag/index.html
@@ -53,7 +53,7 @@
 						<div class="icon icon_1 flex">
 							<img src="img/icon1.png" alt="">
 						</div>
-						<a href="">Оборудование</a>
+						<a>Оборудование</a>
 						<div class="dropdown flex">
 							<ul>
 								<li><a href="">Ulthera system</a></li>
@@ -69,7 +69,7 @@
 								<li><a href="">Milon</a></li>
 								<li><a href="">Palomar</a></li>
 							</ul>
-							<ul>
+							<ul class="last">
 								<li><a href="">Lutronic</a></li>
 								<li><a href="">Alma</a></li>
 								<li><a href="">Venus concept</a></li>
