--- a/zernovarka/index.html
+++ b/zernovarka/index.html
@@ -334,6 +334,39 @@ sed do eiusmod tempor incididunt</a>
 				</div>
 			</div>
 		</div>
+		<!--Modal window-->
+		<div class="modal-form modal-call">
+			<h2>Заказать обратный <br> звонок</h2>
+			<form action="">
+				<div class="modal__input">
+					<input type="text" placeholder="Ваше имя">
+				</div>
+				<div class="modal__input modal__input_2">
+					<input type="text" placeholder="097-777-77-77">
+				</div>
+				<div class="modal__input modal__input_submit">
+					<input class="btn btn_send" type="submit" placeholder="ОТПРАВИТЬ">
+				</div>
+			</form>
+			<p>Оставьте свои контакты, и менеджер <br>
+			перезвонит вам в течение 10 минут</p>
+		</div>
+		<div class="overlay"></div>
+		<!--Modal window end-->
+		<!--Modal window-->
+		<div class="modal-form modal-success">
+			<div class="modal__cont flex">
+				<div class="modal__icon flex">
+					<img src="img/check.png" alt="">
+				</div>
+				<h3>Ваши данные <br>
+				успешно отправлены!</h3>
+				<p>В течении 10 минут с вами <br>
+ 				свяжится наш менеждер</p>
+			</div>
+		</div>
+		<div class="overlay"></div>
+		<!--Modal window end-->
 	</main>	
 			
 <!-- CONTENT EOF   -->
@@ -398,7 +431,7 @@ sed do eiusmod tempor incididunt</a>
 			<div class="wrapper flex">
 				<nav class="header__bottnav">
 					<ul class="flex">
-						<li><a href="" class="active">Каталог запчастей</a></li>
+						<li class="toggle"><a href="" class="active">Каталог запчастей</a></li>
 						<li><a href="" class="active">Кофемашины / кофемолки</a></li>
 						<li><a href="" class="active">Товары для HoReCa</a></li>
 						<li><a href="">Ремонт / Аренда кофемашин</a></li>
@@ -456,16 +489,16 @@ sed do eiusmod tempor incididunt</a>
 					</nav>
 				</div>
 				<div class="footer__info">
-					<div class="footer__box">
+					<div class="footer__box footer__box_1">
 						<p>Телефон:</p>
 						<a href="+380931111111">+38 (093) <span>111-11-11</span></a>
 						<a href="+380931111111">+38 (093) <span>111-11-11</span></a>
 						<a href="+380931111111">+38 (093) <span>111-11-11</span></a>
 					</div>
-					<div class="footer__box">
+					<div class="footer__box footer__box_2">
 						<p>Пн. - Пт. с 9:00 - 19:00</p>
 					</div>
-					<div class="footer__box">
+					<div class="footer__box footer__box_3">
 						<p>E-mail:</p>
 						<a href="mailto:zernovarka@gmail.com">zernovarka@gmail.com</a>
 					</div>
