--- a/bitlab/index.html
+++ b/bitlab/index.html
@@ -2242,19 +2242,34 @@
 						</div>
 						<div class="comments__videos">
 							<div class="comments__video">
-								<video id="" video loop onclick="this.paused ? this.play() : this.pause();">
+								<video video loop >
 									<source src="img/big_buck_bunny.mp4" type="video/mp4">
 								</video>
+								<img src="img/play.png" alt="" class="play">
+								<div class="cominfo">
+									<h2>Иванов Иван Иванович</h2>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos consequatur laborum maxime aperiam, quis saepe culpa debitis inventore eveniet ipsum ab</p>
+								</div>
 							</div>
 							<div class="comments__video">
-								<video id="slick-video" video loop onclick="this.paused ? this.play() : this.pause();">
+								<video video loop>
 									<source src="img/big_buck_bunny.mp4" type="video/mp4">
 								</video>
+								<img src="img/play.png" alt="" class="play">
+								<div class="cominfo">
+									<h2>Иванов Иван Иванович</h2>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos consequatur laborum maxime aperiam, quis saepe culpa debitis inventore eveniet ipsum ab</p>
+								</div>
 							</div>
 							<div class="comments__video">
-								<video id="slick-video" video loop onclick="this.paused ? this.play() : this.pause();">
+								<video video loop>
 									<source src="img/big_buck_bunny.mp4" type="video/mp4">
 								</video>
+								<img src="img/play.png" alt="" class="play">
+								<div class="cominfo">
+									<h2>Иванов Иван Иванович</h2>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos consequatur laborum maxime aperiam, quis saepe culpa debitis inventore eveniet ipsum ab</p>
+								</div>
 							</div>
 						</div>
 					</div>
