--- a/sputnics/news.html
+++ b/sputnics/news.html
@@ -36,7 +36,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Запуски спутников и космические <br>
+							<a class="news__subtitle">Запуски спутников и космические
 							образовательные проекты</a>
 							<p class="news__text">CubeSat, в отличие от конструктора <br>
 							OrbiCraft является примером <br>
@@ -50,7 +50,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Сегодня в «Манеже» стартовала <br>
+							<a class="news__subtitle">Сегодня в «Манеже» стартовала
 							выставка «Россия, устремленная <br>
 							в будущее»</a>
 							<p class="news__text">
@@ -65,7 +65,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Обновление методических пособий <br>
+							<a class="news__subtitle">Обновление методических пособий
 							и подготовка уроков</a>
 							<p class="news__text">CubeSat, в отличие от конструктора <br>
 							OrbiCraft является примером <br>
@@ -79,7 +79,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Запуски спутников и космические <br>
+							<a class="news__subtitle">Запуски спутников и космические
 							образовательные проекты</a>
 							<p class="news__text">CubeSat, в отличие от конструктора <br>
 							OrbiCraft является примером <br>
@@ -93,7 +93,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Сегодня в «Манеже» стартовала <br>
+							<a class="news__subtitle">Сегодня в «Манеже» стартовала
 							выставка «Россия, устремленная <br>
 							в будущее»</a>
 							<p class="news__text">
@@ -108,7 +108,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Обновление методических пособий <br>
+							<a class="news__subtitle">Обновление методических пособий 
 							и подготовка уроков</a>
 							<p class="news__text">CubeSat, в отличие от конструктора <br>
 							OrbiCraft является примером <br>
