--- a/sputnics/index.html
+++ b/sputnics/index.html
@@ -150,7 +150,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Запуски спутников и космические <br>
+							<a class="news__subtitle">Запуски спутников и космические
 							образовательные проекты</a>
 							<p class="news__text">CubeSat, в отличие от конструктора <br>
 							OrbiCraft является примером <br>
@@ -164,7 +164,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Сегодня в «Манеже» стартовала <br>
+							<a class="news__subtitle">Сегодня в «Манеже» стартовала
 							выставка «Россия, устремленная <br>
 							в будущее»</a>
 							<p class="news__text">
@@ -179,7 +179,7 @@
 							<span class="news__more flex">+</span>
 						</div>
 						<div class="news__info">
-							<a class="news__subtitle">Обновление методических пособий <br>
+							<a class="news__subtitle">Обновление методических пособий
 							и подготовка уроков</a>
 							<p class="news__text">CubeSat, в отличие от конструктора <br>
 							OrbiCraft является примером <br>
