--- a/bitlab/index.html
+++ b/bitlab/index.html
@@ -5,9 +5,9 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<title>Главная</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />	
+	<link rel="stylesheet" href="css/slick.css">
 </head>
 <body class="loaded">
 
@@ -259,7 +259,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -317,7 +317,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -375,7 +375,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -433,7 +433,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -477,7 +477,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -519,7 +519,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -561,7 +561,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -606,7 +606,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -649,7 +649,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -692,7 +692,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -757,7 +757,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -820,7 +820,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -883,7 +883,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -939,7 +939,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -988,7 +988,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -2384,7 +2384,8 @@
 		<!-- Sertificate-->
 		<div class="originalimg">
 			<span class="originalimg__close">+</span>
-			<img src="img/sert.jpg" alt="">
+			<div class="originalimg__overlay"></div>
+			<!-- <img src="img/sert.jpg" alt="" class="current"> -->
 		</div>
 		<!--Modal window-->
 		<div class="modal-form modal-1">
@@ -2414,7 +2415,7 @@
 							</div>
 							<div class="footer__input flex">
 								<img src="img/input5.png" alt="">
-								<input type="text" placeholder="Контактный телефон">
+								<input type="text" class="phone" placeholder="Контактный телефон">
 							</div>
 							<div class="footer__input flex">
 								<img src="img/input6.png" alt="">
@@ -2491,7 +2492,7 @@
 							</div>
 							<div class="footer__input footer__input_2 flex">
 								<img src="img/input5.png" alt="">
-								<input type="text" placeholder="Контактный телефон">
+								<input type="text" class="phone" placeholder="Контактный телефон">
 							</div>
 							<div class="footer__input footer__input_3 flex">
 								<img src="img/input6.png" alt="">
@@ -2613,11 +2614,11 @@
 				<div class="footer__box wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.5s">
 					<h2 class="footer__title">Навигация</h2>
 					<ul>
-						<li><a href="">О нас</a></li>
-						<li><a href="">Услуги</a></li>
-						<li><a href="">Портфолио </a></li>
-						<li><a href="">Отзывы</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="#ex1">О нас</a></li>
+						<li><a href="#ex2">Услуги</a></li>
+						<li><a href="#ex3">Портфолио </a></li>
+						<li><a href="#ex4">Отзывы</a></li>
+						<li><a href="#ex5">Контакты</a></li>
 					</ul>
 				</div>
 				<div class="footer__box wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
@@ -2629,7 +2630,7 @@
 						</div>
 						<div class="footer__input footer__input_2 flex">
 							<img src="img/fphone.png" alt="">
-							<input type="text" placeholder="Контактный телефон">
+							<input type="text" class="phone" placeholder="Контактный телефон">
 						</div>
 						<div class="footer__input footer__input_3 flex">
 							<img src="img/fmail.png" alt="">
@@ -2675,8 +2676,9 @@
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
 	<script src="js/custom.js" ></script>
-	<script src="js/components/slick.js" ></script>
+	<script src="js/components/slick.min.js" ></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 	<script src="js/components/wow.min.js" ></script>
 </body>
 </html>
