--- a/bitlab/index.html
+++ b/bitlab/index.html
@@ -2690,10 +2690,10 @@
 	<script type="text/javascript" src="js/components/jquery.formstyler.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
-	<script asynch src="js/custom.js" ></script>
-	<script asynch src="js/components/slick.min.js" ></script>
+	<script async src="js/custom.js" ></script>
+	<script async src="js/components/slick.min.js" ></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
-	<script asynch src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
-	<script asynch src="js/components/wow.min.js" ></script>
+	<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+	<script async src="js/components/wow.min.js" ></script>
 </body>
 </html>
