--- a/bitlab/index.html
+++ b/bitlab/index.html
@@ -180,35 +180,45 @@
 					<img src="img/line2.png" alt="">
 				</div>
 				<div class="services__top flex">
-					<div class="services__item services__item_active flex wow zoomInLeft" data-wow-duration="1s" data-wow-delay="0.5s" data-id="1">
-						<div class="services__img">
-							<img src="img/serv1.png" alt="">
+					<div class="services__item services__item_active wow zoomInLeft" data-wow-duration="1s" data-wow-delay="0.5s" data-id="1">
+						<div class="services__cont flex">
+							<div class="services__img">
+								<img src="img/serv1.png" alt="">
+							</div>
+							<p>Создание <br> сайтов</p>
 						</div>
-						<p>Создание <br> сайтов</p>
 					</div>
-					<div class="services__item flex wow zoomInLeft" data-wow-duration="1s" data-wow-delay="0.8s" data-id="2">
-						<div class="services__img">
-							<img src="img/serv2.png" alt="">
+					<div class="services__item wow zoomInLeft" data-wow-duration="1s" data-wow-delay="0.8s" data-id="2">
+						<div class="services__cont flex">
+							<div class="services__img">
+								<img src="img/serv2.png" alt="">
+							</div>
+							<p>Дизайн и <br> проектирование </p>
 						</div>
-						<p>Дизайн и <br> проектирование </p>
 					</div>
-					<div class="services__item flex wow zoomInLeft" data-wow-duration="1s" data-wow-delay="1.1s" data-id="3">
-						<div class="services__img">
-							<img src="img/serv3.png" alt="">
+					<div class="services__item wow zoomInLeft" data-wow-duration="1s" data-wow-delay="1.1s" data-id="3">
+						<div class="services__cont flex">
+							<div class="services__img">
+								<img src="img/serv3.png" alt="">
+							</div>
+							<p>Поддержка <br> сайтов </p>
 						</div>
-						<p>Поддержка <br> сайтов </p>
 					</div>
-					<div class="services__item flex wow zoomInLeft" data-wow-duration="1s" data-wow-delay="1.3s" data-id="4">
-						<div class="services__img">
-							<img src="img/serv4.png" alt="">
+					<div class="services__item wow zoomInLeft" data-wow-duration="1s" data-wow-delay="1.3s" data-id="4">
+						<div class="services__cont flex">
+							<div class="services__img">
+								<img src="img/serv4.png" alt="">
+							</div>
+							<p>Продвижение <br> и маркетинг </p>
 						</div>
-						<p>Продвижение <br> и маркетинг </p>
 					</div>
 					<div class="services__item flex wow zoomInLeft" data-wow-duration="1s" data-wow-delay="1.6s" data-id="5">
-						<div class="services__img">
-							<img src="img/serv5.png" alt="">
+						<div class="services__cont flex">
+							<div class="services__img">
+								<img src="img/serv5.png" alt="">
+							</div>
+							<p>Корпоративный <br> портал </p>
 						</div>
-						<p>Корпоративный <br> портал </p>
 					</div>
 				</div>
 				<div class="services__bott services__bott_1 flex">
